# TheBook

./: .gitignore  CLAUDE.md  CMakeLists.txt  MANUAL-VERIFICATION.md  PLUGINS.md  README.md  ROADMAP.md  documentation-alignment-report.md  plugins
.claude/: preferences-README.md  system-config.json
.claude/agents/: foundation-agent.md  troubleshoot-agent.md  ui-design-agent.md  validation-agent.md
.claude/commands/: build-cross-platform.md  clear-cache.md  pfs.md  publish.md  research-dsp.md  setup.md  startup.md  thebook.md  titlepage.md
.claude/hooks/: SessionStart.sh
.claude/hooks/validators/: contract_validator.py
.claude/schemas/: README.md
.claude/skills/aesthetic-dreaming/: SKILL.md
.claude/skills/cross-platform-build/: SKILL.md
.claude/skills/design-sync/: SKILL.md
.claude/skills/dsp-patterns/: SKILL.md
.claude/skills/plugin-ideation/: SKILL.md
.claude/skills/plugin-improve/: SKILL.md
.claude/skills/plugin-lifecycle/: SKILL.md
.claude/skills/plugin-planning/: SKILL.md
.claude/skills/plugin-publish/: SKILL.md
.claude/skills/plugin-workflow/: SKILL.md
.claude/skills/startup/: SKILL.md
.claude/skills/system-setup/: SKILL.md
.claude/skills/thebook-reference/: SKILL.md
.github/workflows/: build-plugins.yml
architecture/: 12-webview-integration-design.md
audits/: dsp-agent-audit.md  foundation-agent-audit.md  gui-agent-audit.md  research-agent-audit.md  shell-agent-audit.md  troubleshooter-audit.md  validator-audit.md
plan/: phase-0-plan.md
plans/: fix-dsp-agent.md  fix-foundation-agent.md  fix-gui-agent.md  fix-research-agent.md  fix-shell-agent.md  fix-troubleshooter.md  fix-validator.md
plugins/AutoClip/: .continue-here.md
plugins/Bitcrusher/: .continue-here.md  CMakeLists.txt  NOTES.md
plugins/Bitcrusher/.ideas/: creative-brief.md  parameter-spec.md
plugins/Bitcrusher/Source/: PluginEditor.cpp  PluginEditor.h  PluginIDs.h  PluginProcessor.cpp  PluginProcessor.h
plugins/ChopShop/: .continue-here.md  CMakeLists.txt
plugins/ChopShop/.ideas/: architecture.md  creative-brief.md  parameter-spec-draft.md  parameter-spec.md  plan.md
plugins/ChopShop/.ideas/mockups/: v1-ui-test.html  v1-ui.yaml  v2-ui-test.html  v2-ui.yaml  v3-ui-test.html  v3-ui.yaml
plugins/ChopShop/Source/: PluginEditor.cpp  PluginEditor.h  PluginIDs.h  PluginProcessor.cpp  PluginProcessor.h
plugins/DriveVerb/: .continue-here.md
plugins/Drum808/: .continue-here.md
plugins/LushPad/: .continue-here.md  CMakeLists.txt
plugins/OrganicHats/: CMakeLists.txt
plugins/Scatter/: .continue-here.md  CHANGELOG.md
plugins/TapeAge/: CHANGELOG.md
plugins/WaveFolder/: .continue-here.md
procedures/skills/: ui-template-library.md
prompts/: 002-migrate-troubleshooting-docs-to-enhanced-schema.md  009-system-setup-skill.md  troubleshoot-fix.md
scripts/: thebook
skills-audit/: plugin-packaging-fixes.md  plugin-planning-fixes-applied.md
troubleshooting/build-failures/: stale-build-after-stage-5-gui-changes-OrganicHats-20251112.md
troubleshooting/patterns/: juce8-critical-patterns.md
(+43 files in other folders)
